<resources>
    <string name="app_name">Calculator_Covey</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="calculate">Calculate</string>
    <string name="calculator">Calculator</string>
    <string name="conversions">Conversions</string>
    <string name="about_content">
        We are a small team of developers from the Pacific Northwest. We strive to make applications cleaner and more intuitive for the user through simple, yet beautiful, interfaces.
        This app combines simple or advanced calculations with a large variety of unit conversions. It is intended for home and office use,
        and is available in both English and Spanish versions.
    </string>
    <string name="lorem_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="result">Result</string>
    <string name="clear">Clear</string>
    <string name="sine">SIN</string>
    <string name="random">RANDOM</string>
    <string name="title">Sarah\'s Calculator</string>
    <string name="hint">Enter Number</string>
    <string name="pi">\u03C0</string>
    <string name="sqr">X\u00B2</string>
    <string name="sqroot">\u221A</string>
    <string name="cosine">COS</string>
    <string name="plusMinus">+/-</string>
    <string name="percent">%</string>
    <string name="backspace">\u226A</string>
    <string name="multiply">*</string>
    <string name="add">+</string>
    <string name="divide">/</string>
    <string name="subtract">-</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>
