<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="98dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

            app:toolbarId="@+id/toolbar">


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2E3131"
        android:foregroundTint="#00B40000"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonNumberOnClick"
            android:text="@string/_9"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button8"
            app:layout_constraintStart_toEndOf="@+id/button8" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonNumberOnClick"
            android:text="@string/_6"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button5"
            app:layout_constraintStart_toEndOf="@+id/button5" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonNumberOnClick"
            android:text="@string/_1"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonNumberOnClick"
            android:text="@string/_0"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonDecimal"
            app:layout_constraintStart_toEndOf="@+id/buttonDecimal" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonNumberOnClick"
            android:text="@string/_3"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button2"
            app:layout_constraintStart_toEndOf="@+id/button2" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonNumberOnClick"
            android:text="@string/_5"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button4"
            app:layout_constraintStart_toEndOf="@+id/button4" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonNumberOnClick"
            android:text="@string/_2"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button1"
            app:layout_constraintStart_toEndOf="@+id/button1" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonOpOnClick"
            android:text="@string/subtract"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/button3" />

        <Button
            android:id="@+id/buttonTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonOpOnClick"
            android:text="@string/multiply"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button6"
            app:layout_constraintStart_toEndOf="@+id/button6" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonEqualsOnClick"
            android:text="@string/equals"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button0"
            app:layout_constraintStart_toEndOf="@+id/button0" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonNumberOnClick"
            android:text="@string/_8"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button7"
            app:layout_constraintStart_toEndOf="@+id/button7" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonOpOnClick"
            android:text="@string/add"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonCalculate"
            app:layout_constraintStart_toEndOf="@+id/buttonCalculate" />

        <Button
            android:id="@+id/buttonDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonNumberOnClick"
            android:text="@string/decimal"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="182dp"
            android:layout_height="56dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="117dp"
            android:background="#000000"
            android:backgroundTint="#0E0E0E"
            android:backgroundTintMode="add"
            android:onClick="buttonClearOnClick"
            android:text="@string/clear"
            android:textColor="@android:color/white"
            android:textColorHighlight="#00C50303"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button0" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonOpOnClick"
            android:text="@string/divide"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/button9"
            app:layout_constraintStart_toEndOf="@+id/button9" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#111111"
            android:onClick="buttonNumberOnClick"
            android:text="@string/_4"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:backgroundTint="#111111"
            android:onClick="buttonNumberOnClick"
            android:text="@string/_7"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textResultView" />

        <TextView
            android:id="@+id/textResultView"
            android:layout_width="77dp"
            android:layout_height="38dp"
            android:layout_marginTop="128dp"
            android:text="@string/result"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtResult"
            android:layout_width="243dp"
            android:layout_height="59dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/result"
            android:inputType="numberSigned"
            android:textColor="@android:color/white"
            android:textColorHighlight="#A600BCD4"
            android:textColorHint="#2500BCD4"
            android:textColorLink="#00BCD4"
            android:textCursorDrawable="@color/colorAccent"
            app:layout_constraintBaseline_toBaselineOf="@+id/textResultView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textResultView" />

        <TextView
            android:id="@+id/operationsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="138dp"
            android:layout_marginBottom="8dp"
            android:textColor="#83FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/edtResult"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="248dp"
            android:layout_height="27dp"
            android:layout_marginTop="36dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
    </androidx.appcompat.widget.Toolbar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>